[package]
name = "rkt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
sanitize-filename = "0.3.0"
rocket-multipart-form-data = "0.10.0"
rocket-download-response = "0.5"
async-std = "1.10.0"
serde_json = "1.0.68"
